fix slide transition issue on tablet.
root cause is transition area is a silbing of navigation area, their parent is the whole page body,
when transition from right to left, the transition area behind navigation area,
so just set navigation area background-color as body background-color, the fliker disappear.

--- a/app/css/tablet.css
+++ b/app/css/tablet.css
@@ -76,4 +76,5 @@ body .mblProgContainer > div::after {
 div .navPane {
 	width:250px;
 	border-right:1px solid black;
+	background-color: #C5CCD3;
 }
